<resources>
    <string name="app_name">Sudoku Master</string>
    <string name="New_Game">NEW GAME</string>
    <string name="Continue">CONTINUE</string>
    <string name="ContinueSmall">Continue</string>
    <string name="About">ABOUT</string>
    <string name="Exit">EXIT</string>
    <string name="New_Game_Alert_Title">Difficulty</string>
    <string name="Easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="ADMOB_APP">ca-app-pub-6074185114340467~4331487592</string>
    <string name="Hard">Hard</string>
    <string name="about_text">\Sudoku is a logic-based number placement puzzle.\nStarting with a partially completed 9x9 grid, the objective is to fill the grid so that each
      row, each column, and each of the 3x3 boxes
      (also called <i>blocks</i>) contains the digits 1 to 9 exactly once.
    </string>
    <string name="go_back_button">Return</string>
    <string name="show_instructions">Show instructions</string>
    <string name="check_board">Check board</string>
    <string name="board_correct">Board is correct</string>
    <string name="board_incorrect">Board is not correct</string>
    <string name="start_piece_error">Can not change start piece</string>
    <string name="choose_difficulty">Choose Difficulty:</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_Advanced">Advanced</string>
    <string name="difficulty_Professional">Professional</string>
    <string name="start_game">Continue</string>
    <string name="add_new_board">Add new board</string>
    <string name="choose_number">Choose number</string>
    <string name="choose_a_number">Choose number to place:</string>
    <string name="remove_piece">Remove piece</string>
    <string name="piece_unsure">Mark piece as unsure</string>
    <string name="actionbar_share">Share</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_exit">Exit</string>
    <string name="preference_social">Social</string>
    <string name="preference_guidelines">Guidelines</string>
    <string name="preference_share">Share</string>
    <string name="preference_horizontal_guidelines">Horizontal Guidelines</string>
    <string name="preference_vertical_guidelines">Vertical Guidelines</string>
    <string name="preference_block_guidelines">Block</string>
    <string name="preference_identical_number">Identical Number</string>
    <string name="preference_info">Info</string>
    <string name="preference_app">App Info</string>
    <string name="preference_rate_us">Rate Us</string>
    <string name="preference_leave_feedback">Leave Feedback</string>
    <string name="preference_contact_us">Contact Us</string>
    <string name="preference_email">eladper2@gmail.com</string>
    <string name="preference_mark_unsure">Mark As Unsure</string>
    <string name="preference_unsure">Unsure</string>
    <string name="preference_unsure_summary">Mark a cell if you are uncertain in its value.</string>
    <string name="vertical_guidelines_summary">If enabled, a vertical guideline will appear across a tapped cell.</string>
    <string name="horizontal_guidelines_summary">If enabled, a horizontal guideline will appear across a tapped cell.</string>
    <string name="block_guidelines_summary">If enabled, a surrounding block will be marked around its tapped cell.</string>
    <string name="identical_number_guidelines_summary">If enabled, cells containing identical numbers to the number on the tapped cell will be highlighted.</string>
    <string name="Loading">Loading...</string>
    <string name="title_activity_app_info">AppInfoActivity</string>
    <string name="TileToRevealItsNumber">Choose A Tile To Reveal Its Number</string>
    <string name="hint">hint</string>
    <string name="save">save</string>
    <string name="reward_alert_dialog_text">You have been awarded:</string>
    <string name="claim">Claim</string>
    <string name="no_thanks">No thanks</string>
    <string name="not_completed">not\ncompleted</string>

</resources>
